Changes in Index file

--- a/index.html
+++ b/index.html
@@ -190,21 +190,21 @@
 				<div class="inner gallery">
 					<div class="row 0%">
 						<div class="3u"><a href="images/fulls/IMG_5388.JPG" class="image fit"><img src="images/thumbs/IMG_5388.JPG" alt="" title="F-Stop: f/1.6, Shutter: 1/1600, ISO: 400" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6279.jpg" class="image fit"><img src="images/thumbs/IMG_6279.jpg" alt="" title="F-Stop: f/6.3, Shutter: 1/320, ISO: 100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6279.JPG" class="image fit"><img src="images/thumbs/IMG_6279.JPG" alt="" title="F-Stop: f/6.3, Shutter: 1/320, ISO: 100" /></a></div>
 						<div class="3u"><a href="images/fulls/IMG_6355.jpg" class="image fit"><img src="images/thumbs/IMG_6355.jpg" alt="" title="F-Stop: f/2.2, Shutter: 1/60, ISO: 200" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6422.jpg" class="image fit"><img src="images/thumbs/IMG_6422.jpg" alt="" title="F-Stop: f/3.5, Exposure: 30secs, ISO: 100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6422.JPG" class="image fit"><img src="images/thumbs/IMG_6422.JPG" alt="" title="F-Stop: f/3.5, Exposure: 30secs, ISO: 100" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/IMG_6855.jpg" class="image fit"><img src="images/thumbs/IMG_6855.jpg" alt="" title="F-Stop: f/5.6, Shutter: 1/500, ISO: 200" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6855.JPG" class="image fit"><img src="images/thumbs/IMG_6855.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/500, ISO: 200" /></a></div>
 						<div class="3u"><a href="images/fulls/IMG_6280.jpg" class="image fit"><img src="images/thumbs/IMG_6280.jpg" alt="" title="F-Stop: f/7.1, Shutter: 1/400, ISO: 100" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_5591.jpg" class="image fit"><img src="images/thumbs/IMG_5591.jpg" alt="" title="F-Stop: f/11, Shutter: 1/320, ISO: 100" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_2219.jpg" class="image fit"><img src="images/thumbs/IMG_2219.jpg" alt="" title="F-Stop: f/5, Shutter: 1/125, ISO: 100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_5591.JPG" class="image fit"><img src="images/thumbs/IMG_5591.jpg" alt="" title="F-Stop: f/11, Shutter: 1/320, ISO: 100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_2219.JPG" class="image fit"><img src="images/thumbs/IMG_2219.JPG" alt="" title="F-Stop: f/5, Shutter: 1/125, ISO: 100" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/IMG_6069.jpg" class="image fit"><img src="images/thumbs/IMG_6069.jpg" alt="" title="F-Stop: f/5.6, Shutter: 1/60, ISO: 800" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6117.jpg" class="image fit"><img src="images/thumbs/IMG_6117.jpg" alt="" title="F-Stop: f/5.6, Shutter: 1/1600, ISO: 400." /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6118.jpg" class="image fit"><img src="images/thumbs/IMG_6118.jpg" alt="" title="F-Stop: f/5, Shutter: 1/200, ISO: 400" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6126.jpg" class="image fit"><img src="images/thumbs/IMG_6126.jpg" alt="" title="F-Stop: f/5.6, Shutter: 1/125, ISO: 800" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6069.JPG" class="image fit"><img src="images/thumbs/IMG_6069.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/60, ISO: 800" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6117.JPG" class="image fit"><img src="images/thumbs/IMG_6117.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/1600, ISO: 400." /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6118.JPG" class="image fit"><img src="images/thumbs/IMG_6118.JPG" alt="" title="F-Stop: f/5, Shutter: 1/200, ISO: 400" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6126.JPG" class="image fit"><img src="images/thumbs/IMG_6126.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/125, ISO: 800" /></a></div>
 					</div>
 				</div>
 			</article>
