Google Analytics tracking code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 		<script src="js/jquery.poptrox.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
+		<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-45331820-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -50,7 +60,8 @@
 					<h4>MS Software Engineering</h4>
 				</header>
 				<p>Pursuing Master's degree in the field of Software Engineering at Arizona State University.<br />
-				Working as a Student Research Assistant for <a href="http://heal.asu.edu" target="_blank"><strong>ASU REACH Project</strong></a> under the guidance of <a href="http://heal.asu.edu/people/kevin-gary/" target="_blank">Dr. Kevin Gary</a>.<br />
+				Working as a Student Research Assistant for <a href="http://heal.asu.edu" target="_blank"><strong>ASU REACH Project</strong></a> under the guidance of <a 
+href="http://heal.asu.edu/people/kevin-gary/" target="_blank">Dr. Kevin Gary</a>.<br />
 				May 2016</p>
 				<br/>
 				<header>
@@ -76,7 +87,8 @@
 						<h6 align="center">Nov 2013 - May 2014</h6>
 						
 					</header>
-					<p align="center">Member of the team which designed and developed automated load testing tool for CISCO. Assistant Team Lead for Developing Online Training Management System for all Zensar Employees across all locations.</p>
+					<p align="center">Member of the team which designed and developed automated load testing tool for CISCO. Assistant Team Lead for Developing Online Training 
+Management System for all Zensar Employees across all locations.</p>
 				</div>
 			</article>
 		
@@ -189,22 +201,34 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/IMG_5388.JPG" class="image fit"><img src="images/thumbs/IMG_5388.JPG" alt="" title="F-Stop: f/1.6, Shutter: 1/1600, ISO: 400" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6279.jpg" class="image fit"><img src="images/thumbs/IMG_6279.jpg" alt="" title="F-Stop: f/6.3, Shutter: 1/320, ISO: 100" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6355.jpg" class="image fit"><img src="images/thumbs/IMG_6355.jpg" alt="" title="F-Stop: f/2.2, Shutter: 1/60, ISO: 200" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6422.jpg" class="image fit"><img src="images/thumbs/IMG_6422.jpg" alt="" title="F-Stop: f/3.5, Exposure: 30secs, ISO: 100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_5388.JPG" class="image fit"><img src="images/thumbs/IMG_5388.JPG" alt="" title="F-Stop: f/1.6, Shutter: 1/1600, 
+ISO: 400" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6279.jpg" class="image fit"><img src="images/thumbs/IMG_6279.jpg" alt="" title="F-Stop: f/6.3, Shutter: 1/320, 
+ISO: 100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6355.jpg" class="image fit"><img src="images/thumbs/IMG_6355.jpg" alt="" title="F-Stop: f/2.2, Shutter: 1/60, ISO: 
+200" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6422.jpg" class="image fit"><img src="images/thumbs/IMG_6422.jpg" alt="" title="F-Stop: f/3.5, Exposure: 30secs, 
+ISO: 100" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/IMG_6855.jpg" class="image fit"><img src="images/thumbs/IMG_6855.jpg" alt="" title="F-Stop: f/5.6, Shutter: 1/500, ISO: 200" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6280.jpg" class="image fit"><img src="images/thumbs/IMG_6280.jpg" alt="" title="F-Stop: f/7.1, Shutter: 1/400, ISO: 100" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_5591.JPG" class="image fit"><img src="images/thumbs/IMG_5591.JPG" alt="" title="F-Stop: f/11, Shutter: 1/320, ISO: 100" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_2219.JPG" class="image fit"><img src="images/thumbs/IMG_2219.JPG" alt="" title="F-Stop: f/5, Shutter: 1/125, ISO: 100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6855.jpg" class="image fit"><img src="images/thumbs/IMG_6855.jpg" alt="" title="F-Stop: f/5.6, Shutter: 1/500, 
+ISO: 200" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6280.jpg" class="image fit"><img src="images/thumbs/IMG_6280.jpg" alt="" title="F-Stop: f/7.1, Shutter: 1/400, 
+ISO: 100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_5591.JPG" class="image fit"><img src="images/thumbs/IMG_5591.JPG" alt="" title="F-Stop: f/11, Shutter: 1/320, ISO: 
+100" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_2219.JPG" class="image fit"><img src="images/thumbs/IMG_2219.JPG" alt="" title="F-Stop: f/5, Shutter: 1/125, ISO: 
+100" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/IMG_6069.JPG" class="image fit"><img src="images/thumbs/IMG_6069.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/60, ISO: 800" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6117.JPG" class="image fit"><img src="images/thumbs/IMG_6117.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/1600, ISO: 400." /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6118.JPG" class="image fit"><img src="images/thumbs/IMG_6118.JPG" alt="" title="F-Stop: f/5, Shutter: 1/200, ISO: 400" /></a></div>
-						<div class="3u"><a href="images/fulls/IMG_6126.JPG" class="image fit"><img src="images/thumbs/IMG_6126.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/125, ISO: 800" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6069.JPG" class="image fit"><img src="images/thumbs/IMG_6069.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/60, ISO: 
+800" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6117.JPG" class="image fit"><img src="images/thumbs/IMG_6117.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/1600, 
+ISO: 400." /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6118.JPG" class="image fit"><img src="images/thumbs/IMG_6118.JPG" alt="" title="F-Stop: f/5, Shutter: 1/200, ISO: 
+400" /></a></div>
+						<div class="3u"><a href="images/fulls/IMG_6126.JPG" class="image fit"><img src="images/thumbs/IMG_6126.JPG" alt="" title="F-Stop: f/5.6, Shutter: 1/125, 
+ISO: 800" /></a></div>
 					</div>
 				</div>
 			</article>
